--- a/client/package.json
+++ b/client/package.json
@@ -14,14 +14,18 @@
     "@apollo/experimental-nextjs-app-support": "^0.11.8",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1"
@@ -32,6 +36,7 @@
     "@graphql-codegen/client-preset": "4.6.1",
     "@graphql-codegen/typescript": "^4.1.3",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
