--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@apollo/client": "^3.12.11",
     "@apollo/experimental-nextjs-app-support": "^0.11.8",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
@@ -24,6 +26,7 @@
     "next": "15.1.6",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.0.1",
