--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,8 @@
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
-    "nodemailer": "^6.10.0",
+    "next": "^15.5.4",
+    "nodemailer": "^7.0.9",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
