--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,16 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/themes": "^3.2.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dom-to-image": "^2.6.0",
     "formik": "^2.4.6",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.474.0",
     "next": "^15.5.4",
     "nodemailer": "^7.0.9",
@@ -41,6 +44,7 @@
     "@graphql-codegen/client-preset": "4.6.1",
     "@graphql-codegen/typescript": "^4.1.3",
     "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+    "@types/dom-to-image": "^2.6.7",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
