--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "0.1.0",
-  "private": true,
+  "prnpivate": true,
   "scripts": {
     "dev:server": "next dev -p 3001",
     "build": "next build",
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "codegen": "^0.1.0",
     "core-js": "^3.40.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
