--- a/admin/package.json
+++ b/admin/package.json
@@ -32,6 +32,7 @@
     "next": "^15.5.4",
     "nodemailer": "^7.0.9",
     "react": "^19.0.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^3.0.1",
