--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "prnpivate": true,
   "scripts": {
     "dev:server": "next dev -p 3001",
-    "build": "next build",
+    "build": " graphql-codegen --config codegen.ts && next build",
     "start": "next start",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.ts"
