--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev:client": "next dev -p 4002",
     "build": "graphql-codegen --config codegen.ts && next build",
-    "start": "next start",
+    "q": "next start",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.ts"
   },
