--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.474.0",
-    "next": "^15.5.9",
+    "next": "15.5.9",
     "nodemailer": "^7.0.11",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
